# 03_macros

./: Cargo.toml  README.md  cliff.toml  show_content.txt  show_content_generics.txt  show_darling_print.txt
examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto.rs  auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs  main copy.rs
src/backend/: mod.rs
