[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.95"
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.95", features = ["extra-traits"] }
